# O-reilly-Deep-Learning

./: .gitignore  Cargo.toml
multi_layer_net/: Cargo.toml
multi_layer_net/src/: grads.rs  grads_exteded.rs  layers.rs  lib.rs  multi_layer_net.rs  multi_layer_net_extended.rs  params.rs  params_extended.rs
multi_layer_net/src/layers/: affine_layer.rs  batch_normalisation_layer.rs  relu_layer.rs  sigmoid_layer.rs
mylib/: Cargo.toml
mylib/src/: mnist.rs
src/: chapter2.rs  chapter3.rs  chapter4.rs  main.rs  mnist.rs
src/chapter2/: main.rs
src/chapter3/: main.rs  show_mnist.rs
src/chapter4/: main.rs  simple_net.rs  train_neural_net.rs  two_layer_net.rs
src/chapter5/: layers.rs  main.rs  train_neural_net.rs  two_layer_net.rs
src/chapter5/layers/: affine_layer.rs  relu_layer.rs  sigmoid_layer.rs  softmax_with_loss_layer.rs
src/chapter6/: main.rs  optimiser.rs  over_fit_decay_batch_norm.rs  overfit_weight_decay.rs
src/chapter6/optimiser/: ada_grad.rs  momentum.rs  sgd.rs  sgd_ext.rs
two_layer_net/: Cargo.toml
two_layer_net/src/: layers.rs  lib.rs  two_layer_net.rs
two_layer_net/src/layers/: affine_layer.rs  relu_layer.rs  softmax_with_loss_layer.rs
