[package]
name = "oreilly_deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
image = "0.24.7"
nalgebra = "0.32.3"
plotters = "0.3.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
