[package]
name = "oreilly_deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oreilly_deep_learning_chapter2"
path = "src/chapter2/main.rs"

[[bin]]
name = "oreilly_deep_learning_chapter3"
path = "src/chapter3/main.rs"

[[bin]]
name = "oreilly_deep_learning_chapter4"
path = "src/chapter4/main.rs"

[dependencies]
mylib = { path = "mylib" }
image = "0.24.7"
nalgebra = "0.32.3"
plotters = "0.3.1"
rand = "0.8.5"
