[package]
name = "multi_layer_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["rayon"] }
flate2 = "1.0.28"
reqwest = { version = "0.11.22", features = ["blocking"] }
rand = "0.8.5"
rand_distr = "0.4.3"
mopa = "0.2.2"
rayon = "1.8"
