[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", features = ["blocking"] }
rand = "0.8.5"
rand_distr = "0.4.3"
image = "0.24.7"
